<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.4.0</version>
    <relativePath />
  </parent>

  <groupId>net.coatli</groupId>
  <artifactId>spring-hexagonal-reference</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>spring-hexagonal-reference</name>
  <description></description>

  <properties>
    <java.version>21</java.version>
    <maven>3.9.9</maven>

    <project.build.environment>prod</project.build.environment>
    <project.build.resourcesDirectory>${basedir}/src/main/resources</project.build.resourcesDirectory>
    <project.build.filterDirectory>${basedir}/src/main/filters</project.build.filterDirectory>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.build.jdk.source>${java.version}</project.build.jdk.source>
    <project.build.jdk.target>${java.version}</project.build.jdk.target>

    <project.build.ut.skip>true</project.build.ut.skip>

    <properties.maven.plugin.version>1.2.1</properties.maven.plugin.version>
    <editorconfig.maven.plugin.version>0.1.3</editorconfig.maven.plugin.version>
    <lombok.maven.plugin>1.18.36</lombok.maven.plugin>
    <liquibase.maven.plugin.version>3.6.3</liquibase.maven.plugin.version>
    <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
    <docker.maven.plugin.version>0.45.1</docker.maven.plugin.version>

    <jsoniter.version>0.9.23</jsoniter.version>
    <javassist.version>3.29.0-GA</javassist.version>
    <postgres.version>42.7.4</postgres.version>

    <lombok.version>1.18.36</lombok.version>
    <mapstruct.version>1.6.3</mapstruct.version>
    <lombok.mapstruct.binding.version>0.2.0</lombok.mapstruct.binding.version>

    <openapi.build.directory>${project.basedir}/src/main/openapi</openapi.build.directory>

    <liquibase.logging>info</liquibase.logging>
    <liquibase.dropFirst>false</liquibase.dropFirst>
    <liquibase.properties.file>${project.build.outputDirectory}/liquibase.properties</liquibase.properties.file>
    <liquibase.build.directory>${project.basedir}/src/main/liquibase</liquibase.build.directory>

    <docker.image.alias>${project.artifactId}</docker.image.alias>
    <docker.image.registry>docker.io</docker.image.registry>
    <docker.image.name>${project.artifactId}:${project.version}</docker.image.name>
    <docker.image.build.directory>${project.basedir}/src/main/docker</docker.image.build.directory>
    <docker.image.build.dockerfiledir>${project.build.outputDirectory}</docker.image.build.dockerfiledir>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.jsoniter</groupId>
      <artifactId>jsoniter</artifactId>
      <version>${jsoniter.version}</version>
    </dependency>
    <dependency>
      <groupId>org.javassist</groupId>
      <artifactId>javassist</artifactId>
      <version>${javassist.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>${postgres.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <!-- Provided -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.mapstruct</groupId>
      <artifactId>mapstruct</artifactId>
      <version>${mapstruct.version}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>${project.artifactId}</finalName>

    <resources>
      <resource>
        <directory>${project.build.resourcesDirectory}</directory>
        <filtering>true</filtering>
      </resource>
      <resource>
        <directory>${docker.image.build.directory}</directory>
        <filtering>true</filtering>
      </resource>
      <resource>
        <directory>${liquibase.build.directory}</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <filters>
      <filter>${project.build.filterDirectory}/${project.build.environment}.properties</filter>
    </filters>

    <!-- Defining the plugin stack -->
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>properties-maven-plugin</artifactId>
        <version>${properties.maven.plugin.version}</version>
        <executions>
          <execution>
            <phase>initialize</phase>
            <goals>
              <goal>read-project-properties</goal>
            </goals>
            <configuration>
              <files>
                <file>${project.build.filterDirectory}/${project.build.environment}.properties</file>
              </files>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.ec4j.maven</groupId>
        <artifactId>editorconfig-maven-plugin</artifactId>
        <version>${editorconfig.maven.plugin.version}</version>
        <executions>
          <execution>
            <phase>initialize</phase>
            <goals>
              <goal>format</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <excludes>
            <exclude>mvnw*</exclude>
            <exclude>.mvn/**</exclude>
            <exclude>**/*.swp</exclude>
          </excludes>
          <includes>
            <include>**</include>
          </includes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.liquibase</groupId>
        <artifactId>liquibase-maven-plugin</artifactId>
        <version>${liquibase.maven.plugin.version}</version>
        <configuration>
          <propertyFile>${liquibase.properties.file}</propertyFile>
          <propertyFileWillOverride>true</propertyFileWillOverride>
          <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin.version}</version>
        <configuration>
          <source>${project.build.jdk.source}</source>
          <target>${project.build.jdk.target}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>
          <annotationProcessorPaths>
            <path>
              <groupId>org.mapstruct</groupId>
              <artifactId>mapstruct-processor</artifactId>
              <version>${mapstruct.version}</version>
            </path>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok-mapstruct-binding</artifactId>
              <version>${lombok.mapstruct.binding.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>io.fabric8</groupId>
        <artifactId>docker-maven-plugin</artifactId>
        <version>${docker.maven.plugin.version}</version>
        <configuration>
          <verbose>true</verbose>
          <images>
            <image>
              <registry>${docker.image.registry}</registry>
              <name>${docker.image.name}</name>
              <build>
                <dockerFileDir>${docker.image.build.dockerfiledir}</dockerFileDir>
                <assembly>
                  <name>artifact</name>
                  <descriptorRef>artifact</descriptorRef>
                </assembly>
              </build>
            </image>
          </images>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>local</id>

      <properties>
        <project.build.environment>local</project.build.environment>
      </properties>

      <build>
        <plugins>
          <plugin>
            <groupId>io.fabric8</groupId>
            <artifactId>docker-maven-plugin</artifactId>
            <configuration>
              <verbose>true</verbose>
              <images>
                <image>
                  <registry>${docker.image.registry}</registry>
                  <name>${docker.image.name}</name>
                  <run>
                    <net>host</net>
                    <containerNamePattern>%a</containerNamePattern>
                    <volumes>
                      <bind>
                        <volume>/tmp:/tmp</volume>
                      </bind>
                    </volumes>
                  </run>
                </image>
              </images>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>dev</id>

      <properties>
        <project.build.environment>dev</project.build.environment>
      </properties>
    </profile>

    <profile>
      <id>prod</id>

      <properties>
        <project.build.environment>prod</project.build.environment>
      </properties>
    </profile>
  </profiles>

</project>
